force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__CargoQuantity__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__CargoQuantity__c</fullName>
    <label>Cargo Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>