force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__ContainerNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ContainerNumber__c</fullName>
    <label>Container Number</label>
    <length>11</length>
    <type>Text</type>
</CustomField>