force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__duplicateIDSealNo__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__duplicateIDSealNo__c</fullName>
    <label>duplicate ID (Seal No)</label>
    <type>TextArea</type>
</CustomField>