force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__GOODSSO__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GOODSSO__c</fullName>
    <label>GOODS S/O</label>
    <referenceTo>clofor_com_cfs__SALES_ORDER__c</referenceTo>
    <relationshipLabel>Container (Goods S/Os)</relationshipLabel>
    <relationshipName>Container_Goods_S_Os</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>