force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__GrossWeightMT__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__GrossWeightMT__c</fullName>
    <label>Gross Weight(MT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>