force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__MeasurementCBM__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__MeasurementCBM__c</fullName>
    <label>Measurement(CBM)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>