force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__SealNumber__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__SealNumber__c</fullName>
    <label>Seal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>