force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/fields/clofor_com_cfs__TRSBill__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TRSBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRS Bill</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>clofor_com_cfs__TRSBill__c.clofor_com_cfs__SalesOrderID__c</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__GOODSSO__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>clofor_com_cfs__TRSBill__c</referenceTo>
    <relationshipLabel>Container (Goods S/Os)</relationshipLabel>
    <relationshipName>TRSBill</relationshipName>
    <type>Lookup</type>
</CustomField>