force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/recordTypes/clofor_com_cfs__ContainerGoodsSO.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__ContainerGoodsSO</fullName>
    <active>true</active>
    <label>Container (Goods S/O)</label>
</RecordType>