force-app/main/default/objects/clofor_com_cfs__ContainerGoodSO__c/validationRules/clofor_com_cfs__Duplicated_Cont_number.validationRule-meta.xml
<ValidationRule>
    <fullName>clofor_com_cfs__Duplicated_Cont_number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISBLANK( clofor_com_cfs__duplicateIDcontno__c ) )</errorConditionFormula>
    <errorMessage>You&apos;ve just input duplicated Container number in same Shipment. Please check again</errorMessage>
</ValidationRule>